--- a/src/app/_shared/header/header.component.scss
+++ b/src/app/_shared/header/header.component.scss
@@ -68,7 +68,7 @@ header {
         margin-left: -2rem !important;
       }
       @include tablet-landscape1 {
-        margin-left: -4rem !important;
+        margin-left: -3.5rem !important;
       }
       @include mobile-portrait{
         margin-left: -1rem !important;
